--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@sparticuz/chromium": "^143.0.0",
     "@tanstack/react-query": "^5.90.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -41,6 +42,7 @@
     "next": "16.0.7",
     "next-themes": "^0.4.6",
     "openai": "^6.14.0",
+    "puppeteer-core": "^24.34.0",
     "qrcode.react": "^4.2.0",
     "react": "19.2.0",
     "react-day-picker": "^9.12.0",
