Add ThomasNet authenticated login support for supplier search

--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,11 @@ NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=
 # Get webhook URL from Mattermost > Integrations > Incoming Webhooks
 MATTERMOST_WEBHOOK_URL=
 
+# ThomasNet Credentials (for authenticated supplier search)
+# Create a free account at https://www.thomasnet.com/register
+THOMASNET_EMAIL=
+THOMASNET_PASSWORD=
+
 # Add additional environment variables below as needed
 # NEXT_PUBLIC_* variables are exposed to the browser
 # Variables without NEXT_PUBLIC_ prefix are server-side only
