Add multi-source supplier aggregator - ThomasNet + CONNEX Marketplace integration

--- a/.env.example
+++ b/.env.example
@@ -27,6 +27,12 @@ MATTERMOST_WEBHOOK_URL=
 THOMASNET_EMAIL=
 THOMASNET_PASSWORD=
 
+# CONNEX Marketplace Credentials (MEP National Network supplier database)
+# Create a free account at https://app.connexmarketplace.com/create-account
+# 165,000+ U.S. manufacturers in the database
+CONNEX_EMAIL=
+CONNEX_PASSWORD=
+
 # Add additional environment variables below as needed
 # NEXT_PUBLIC_* variables are exposed to the browser
 # Variables without NEXT_PUBLIC_ prefix are server-side only
