--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "date-fns": "^4.1.0",
     "firebase": "^12.6.0",
     "firebase-admin": "^13.6.0",
+    "googleapis": "^170.0.0",
     "lucide-react": "^0.556.0",
     "next": "16.0.7",
     "next-themes": "^0.4.6",
